--- a/login-cadastro/cadastrar.html
+++ b/login-cadastro/cadastrar.html
@@ -4,6 +4,7 @@
 	<title>Tela de Cadastro</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="normalize.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	<div class="container">
